# clang-build-time-processor

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/gui/: mod.rs  persistance.rs  style.rs  trace_bar.rs
src/gui/browsing/: backend_view.rs  frontend_view.rs  includes_view.rs  mod.rs  sources_view.rs  summary_view.rs  top_level_selector.rs
src/model/: mod.rs
src/processing/: build_path_inference.rs  mod.rs  summary.rs  trace_format.rs
