[package]
name = "clang-build-time-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
cpp_demangle = "0.4.4"
directories = "5.0.1"
iced = { version = "0.13.1", features = ["canvas"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"

[profile.dev]
opt-level = 1
debug = "line-tables-only"
